[gd_scene load_steps=3 format=3 uid="uid://cfsqqyirq7lwq"]

[ext_resource type="Script" path="res://scripts/menuScripts/title.gd" id="1_1gvb7"]
[ext_resource type="Theme" uid="uid://co8018sbwci4f" path="res://scenes/menus/theme.tres" id="1_fr6sq"]

[node name="titleScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_fr6sq")
script = ExtResource("1_1gvb7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 649.0
color = Color(0.0745098, 0, 0.352941, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 656.0
offset_right = 1157.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 100
text = "IE-Aim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 248.0
offset_right = 745.0
offset_bottom = 526.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 17.0
offset_right = 321.0
offset_bottom = 263.0

[node name="levelSelect" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Level Select"

[node name="charts" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Record Charts
"

[node name="settingButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "settings"

[node name="levelSelect" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 47.0
offset_top = 46.0
offset_right = 396.0
offset_bottom = 618.0

[node name="VBoxContainer" type="VBoxContainer" parent="levelSelect"]
layout_mode = 0
offset_left = 27.0
offset_top = 18.0
offset_right = 324.0
offset_bottom = 540.0

[node name="gridShot" type="Button" parent="levelSelect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Grid Shot"

[node name="targetTrack" type="Button" parent="levelSelect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Target Track"

[node name="flickShot" type="Button" parent="levelSelect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Flick Shot"

[node name="timedShot" type="Button" parent="levelSelect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Timed Shot
"

[node name="Button5" type="Button" parent="levelSelect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Level 5"

[node name="backButton" type="Button" parent="levelSelect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="Panel/VBoxContainer/levelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/charts" to="." method="_on_charts_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/settingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="levelSelect/VBoxContainer/gridShot" to="." method="_on_grid_shot_pressed"]
[connection signal="pressed" from="levelSelect/VBoxContainer/targetTrack" to="." method="_on_target_track_pressed"]
[connection signal="pressed" from="levelSelect/VBoxContainer/flickShot" to="." method="_on_flick_shot_pressed"]
[connection signal="pressed" from="levelSelect/VBoxContainer/timedShot" to="." method="_on_timed_shot_pressed"]
[connection signal="pressed" from="levelSelect/VBoxContainer/backButton" to="." method="_on_back_button_pressed"]
